--- a/int-tests/config.test.yaml
+++ b/int-tests/config.test.yaml
@@ -3,5 +3,5 @@ server:
    read_timeout: 5s
    write_timeout: 5s
 database:
-  dsn: "postgres://user:password@192.168.107.2:5432/eventdb_test?sslmode=disable"
+  dsn: "postgres://user:password@localhost:5432/eventdb_test?sslmode=disable"
  
