--- a/int-tests/config.test.yaml
+++ b/int-tests/config.test.yaml
@@ -4,4 +4,5 @@ server:
    write_timeout: 5s
 database:
   dsn: "postgres://user:password@localhost:5432/eventdb_test?sslmode=disable"
+  #dsn: "postgres://user:password@postgres-test.int-tests.orb.local:5432/eventdb_test?sslmode=disable"
  
