- добавил возможность авторизации JWT
- добавил модели запросов для Swagger

- общие доработки и правки

--- a/deploy/local/config.dev.yaml
+++ b/deploy/local/config.dev.yaml
@@ -3,8 +3,8 @@ server:
    read_timeout: 5s
    write_timeout: 5s
 database:
-  # dsn: "postgres://user:password@localhost:5432/eventdb?sslmode=disable"
-  dsn: "postgres://user:password@postgres.local.orb.local:5432/eventdb?sslmode=disable" #Строка для разработки на маке
+  dsn: "postgres://user:password@localhost:5432/eventdb?sslmode=disable"
+  # dsn: "postgres://user:password@postgres.local.orb.local:5434/eventdb?sslmode=disable" #Строка для разработки на маке
   auto_migrate: true
 jwt:
   secret: "my-super-secret-jwt-key-minimum-32-charsssss"
