--- a/deploy/local/docker-compose.yaml
+++ b/deploy/local/docker-compose.yaml
@@ -19,5 +19,21 @@ services:
       timeout: 3s
       retries: 10
 
+  redis:
+    image: redis:7.2-alpine
+    container_name: eventredis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    command: redis-server --save 60 1 --loglevel warning
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
 volumes:
   pgdata:
+  redisdata:
