--- a/int-tests/config.test.yaml
+++ b/int-tests/config.test.yaml
@@ -5,4 +5,8 @@ server:
 database:
   dsn: "postgres://user:password@localhost:5432/eventdb_test?sslmode=disable"
   #dsn: "postgres://user:password@postgres-test.int-tests.orb.local:5432/eventdb_test?sslmode=disable"
- 
+redis:
+  adr: "localhost:6380" # Адрес деплой
+  # adr: "rredis-test.int-tests.orb.local:6380" #Адрес для мака
+  pass: ""
+  DB: 0
