--- a/int-tests/docker-compose-test.yaml
+++ b/int-tests/docker-compose-test.yaml
@@ -19,5 +19,21 @@ services:
       timeout: 3s
       retries: 10
 
+  redis-test:
+      image: redis:7.2-alpine
+      container_name: eventredis-test
+      restart: unless-stopped
+      ports:
+        - "6380:6379"
+      volumes:
+        - redisdata-test:/data
+      command: redis-server --save 60 1 --loglevel warning
+      healthcheck:
+        test: ["CMD", "redis-cli", "ping"]
+        interval: 5s
+        timeout: 3s
+        retries: 5
+
 volumes:
   pgdata-test:
+  redisdata-test:
