--- a/int-tests/config.test.yaml
+++ b/int-tests/config.test.yaml
@@ -25,3 +25,5 @@ redis:
   # Время жизни соединений
   conn_max_idle_time: 300  # 5 минут простоя
   conn_max_lifetime: 3600  # 1 час максимальной жизни
+ # Настройка защиты
+  lock_ttl: 10 # 10 секунд
